feat: enhance route details with description, arrival location, and video URL; update deployment script to generate Prisma Client

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -47,6 +47,10 @@ jobs:
              echo "Installing backend dependencies..."
              cd server 
              npm install
+
+             # Generate Prisma Client
+             echo "Generating Prisma Client..."
+             npx prisma generate
              
              # Setup Database (Migration)
              echo "Updating database schema..."
